--- a/footer.html
+++ b/footer.html
@@ -1,5 +1,5 @@
 <ul class="copyright" style="opacity: 0.5;">
-    <li><a href="#">&copy; 星芒不知道</a></li><li><small>Design: <a href="https://www.douyin.com/user/MS4wLjABAAAAfmrxAjLFH1gyMh3RRK465-bWHzufwS7LsxyZZkVElzo?from_tab_name=main" target="_blank">HTML5 UP</a></small></li><li>thanks: <a href="http://unsplash.com" target="_blank">advan10</a></li>
+    <li><a href="#">&copy; 星芒不知道</a></li><li><small>Design: <a href="huml5up.net">HTML5 UP</a></small></li><li>thanks: <a href="https://www.douyin.com/user/MS4wLjABAAAAfmrxAjLFH1gyMh3RRK465-bWHzufwS7LsxyZZkVElzo?from_tab_name=main" target="_blank">advan10</a></li>
 </ul>
 <ul class="copyright" style="opacity: 0.5;">
     <li>喵喵喵</li><li><a href="https://space.bilibili.com/2018769720" target="_blank">bilibili</a></li>
